Changed some styling to fix the promotion section's layout issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,8 +61,8 @@ body {
     font-weight: bold;
 }
 
-.alert-container {
-
+.alert-container .col-12 {
+    padding: 0;
 }
 
 /* Callout Section */
